Pagination and search work is complete and auction edit is complete

--- a/DealDouble.Database/DealDouble.Database.csproj
+++ b/DealDouble.Database/DealDouble.Database.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\202002261429124_virtualaddinCategory.designer.cs">
       <DependentUpon>202002261429124_virtualaddinCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002281230481_validationAdd.cs" />
+    <Compile Include="Migrations\202002281230481_validationAdd.designer.cs">
+      <DependentUpon>202002281230481_validationAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -108,6 +112,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002261429124_virtualaddinCategory.resx">
       <DependentUpon>202002261429124_virtualaddinCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002281230481_validationAdd.resx">
+      <DependentUpon>202002281230481_validationAdd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
