--- a/DealDouble.Database/DealDouble.Database.csproj
+++ b/DealDouble.Database/DealDouble.Database.csproj
@@ -62,6 +62,15 @@
   <ItemGroup>
     <Compile Include="Context.cs" />
     <Compile Include="DealDoubleDBInitializer.cs" />
+    <Compile Include="Migrations\202003111116049_InitialCreate.cs" />
+    <Compile Include="Migrations\202003111116049_InitialCreate.designer.cs">
+      <DependentUpon>202003111116049_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003131520246_addSummaryColumn.cs" />
+    <Compile Include="Migrations\202003131520246_addSummaryColumn.designer.cs">
+      <DependentUpon>202003131520246_addSummaryColumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +82,14 @@
       <Project>{ECD720AA-D99E-40CD-BCD6-23E5F45B0E97}</Project>
       <Name>DealDouble.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202003111116049_InitialCreate.resx">
+      <DependentUpon>202003111116049_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003131520246_addSummaryColumn.resx">
+      <DependentUpon>202003131520246_addSummaryColumn.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
