--- a/DealDouble.Web/DealDouble.Web.csproj
+++ b/DealDouble.Web/DealDouble.Web.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\AuctionController.cs" />
     <Compile Include="Controllers\BidsController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
@@ -221,6 +222,7 @@
     <Compile Include="ViewModels\AuctionsViewModels.cs" />
     <Compile Include="ViewModels\BaseViewModels.cs" />
     <Compile Include="ViewModels\CategoriesViewModels.cs" />
+    <Compile Include="ViewModels\DashboardViewModels.cs" />
     <Compile Include="ViewModels\SharedViewModels.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -231,9 +233,163 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\shop-homepage.css" />
+    <Content Include="Content\Dashboard\css\dashboard.css" />
     <Content Include="Content\font-awesome\css\font-awesome.css" />
     <Content Include="Content\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\images\033ef16e-8ad5-4a80-912c-acacce632b39.jpg" />
+    <Content Include="Content\images\03c30e36-450c-41b8-bee1-100070e3c058.jfif" />
+    <Content Include="Content\images\04276f10-4c9d-4b15-8806-8009f82db61e.jfif" />
+    <Content Include="Content\images\05804853-5a28-4b6c-92d1-91219a3eaf4e.jpg" />
+    <Content Include="Content\images\071d25f8-063a-417d-8eb6-a905b75ec568.jpg" />
+    <Content Include="Content\images\07bbd147-e3c8-47d9-837b-0f4ba17aef75.jpg" />
+    <Content Include="Content\images\095d8edf-f07e-4f2b-8953-89b231fa78a6.jpg" />
+    <Content Include="Content\images\0cf57d77-846e-47d7-a21e-b3ffa7a4bd68.jpg" />
+    <Content Include="Content\images\0d442ecc-247f-4184-a4a7-49bee6189895.jpg" />
+    <Content Include="Content\images\0d695583-6455-45a5-91a0-00f179ff8444.jfif" />
+    <Content Include="Content\images\0db4accc-791c-41bb-a9be-f2ba125e063d.jpg" />
+    <Content Include="Content\images\0fa13f9f-48bf-4a68-8d36-8e889282f411.jpg" />
+    <Content Include="Content\images\127f0677-8dd4-47ce-9c29-b2adc4580ebb.png" />
+    <Content Include="Content\images\144a654b-d038-4561-b3b2-6ceaa7f2805e.jpg" />
+    <Content Include="Content\images\15031b29-f2c4-454c-bea7-6fd85d99694a.jpg" />
+    <Content Include="Content\images\1527dfd9-6b09-40ac-afe1-664502474c27.png" />
+    <Content Include="Content\images\163f2e9c-464c-401c-8165-b8c56c9cf7c3.jpg" />
+    <Content Include="Content\images\19281aee-5b74-497a-bfa7-2ee056a7e89d.png" />
+    <Content Include="Content\images\1b5a3814-2fcf-4d6a-ace3-e7b20c192131.jfif" />
+    <Content Include="Content\images\1be6cfe7-dac6-415c-ad17-0092750f5574.jpg" />
+    <Content Include="Content\images\1f5e5e3a-701a-4dda-9d81-09334d494d23.png" />
+    <Content Include="Content\images\2220b107-bd7a-4bc1-a36a-2fa4deb705c9.jpg" />
+    <Content Include="Content\images\29749419-982c-47ad-9c2f-8bb8718d3af5.png" />
+    <Content Include="Content\images\2a27a424-0d63-4316-9115-f29d077db8e6.jpg" />
+    <Content Include="Content\images\2baf6240-2887-428c-9fd2-d6b6275bac94.jpg" />
+    <Content Include="Content\images\2d3bed1b-91cb-428d-be36-f2695bbdda96.jpg" />
+    <Content Include="Content\images\33eb5a90-0010-45d2-aa60-e48d629217df.png" />
+    <Content Include="Content\images\36856c8d-9cea-4b86-93b0-33f0e096431d.jpg" />
+    <Content Include="Content\images\3824854b-22e8-408a-9a2e-07bac2b943a0.png" />
+    <Content Include="Content\images\389177f2-1550-4f5f-be6d-72aa2ea59bfd.jpg" />
+    <Content Include="Content\images\39f83be3-1efc-4d5e-9b35-55736e14b684.jpg" />
+    <Content Include="Content\images\3a094965-270c-4f00-b40c-d4612f8883b7.jpg" />
+    <Content Include="Content\images\3a91e2e4-7210-44f8-a540-e4b809ad6509.jpg" />
+    <Content Include="Content\images\3bad97b7-00d3-4a29-9caf-0dbf615a7c6b.jpg" />
+    <Content Include="Content\images\3da1ee23-a4c9-4d9f-9939-2bc1473bb955.jpg" />
+    <Content Include="Content\images\3e6deef8-aece-4679-9c13-a418e4a2345a.png" />
+    <Content Include="Content\images\3f32971a-0bc1-4b58-8f5d-d34de3f8b613.jpg" />
+    <Content Include="Content\images\42963563-0ab2-4b00-b1ae-5de912a1fa08.jpg" />
+    <Content Include="Content\images\462c20a1-def5-414a-8398-c5e8068310e8.jpg" />
+    <Content Include="Content\images\46c066ef-4b4a-481f-8482-ae3286b415d3.jpg" />
+    <Content Include="Content\images\48a73cb1-c8dd-4914-bd38-c958aa1c1da5.jpg" />
+    <Content Include="Content\images\4976f6fd-1453-4b1b-87d5-efe00a8c15e0.jpg" />
+    <Content Include="Content\images\4b952bd9-18a5-4744-b208-ae1e041c890a.jpg" />
+    <Content Include="Content\images\4c10c365-f82e-491e-bfc2-5f8561988cac.jpg" />
+    <Content Include="Content\images\4f869b44-ce1f-413e-a595-be5a50486639.jpg" />
+    <Content Include="Content\images\50b5d14d-0d3e-44de-b982-60876ceaff11.png" />
+    <Content Include="Content\images\510f0771-9450-4d6e-bcb0-ea7609aec24b.jpg" />
+    <Content Include="Content\images\51264ecd-7f9b-47fd-b335-3c6a3b66a5c4.jpg" />
+    <Content Include="Content\images\52736b08-5492-4c14-97d6-a6db1cf0b3dc.jpg" />
+    <Content Include="Content\images\54979723-6ccf-439c-b48b-5078ecc541c0.png" />
+    <Content Include="Content\images\59aee568-4eaa-4bb7-ad19-c14b26893983.jpg" />
+    <Content Include="Content\images\5ad745a8-c3f3-4f98-832f-26d66aadd9c7.jpg" />
+    <Content Include="Content\images\5b34fd46-fdc3-4b7c-b1f5-830e6d85f178.jpg" />
+    <Content Include="Content\images\5f505ac2-babc-41a0-bc69-5d4ac126e6a2.jpg" />
+    <Content Include="Content\images\5f84117b-6141-4b24-b6af-16aa296e2a32.png" />
+    <Content Include="Content\images\5fbe105c-b2ce-4604-830f-f65d54796749.png" />
+    <Content Include="Content\images\6180d009-9f19-44f7-a91f-8f23ef16cee6.png" />
+    <Content Include="Content\images\64069df2-4b52-4576-aead-82736ccb1883.jpg" />
+    <Content Include="Content\images\64674389-6d46-46bf-923d-39c8eede6d6c.jpg" />
+    <Content Include="Content\images\65764159-b67b-408e-8be8-6237c75d1a79.jpg" />
+    <Content Include="Content\images\66cee144-da32-4326-b843-39d391267c5f.jpg" />
+    <Content Include="Content\images\6836e608-7826-4b4d-ab35-22cd7a48c4f3.png" />
+    <Content Include="Content\images\6dd6eb09-3bd0-4545-b042-4b4e12cb7a68.jpg" />
+    <Content Include="Content\images\6f25d108-3cda-44fc-b966-8c8096dfcb2e.jpg" />
+    <Content Include="Content\images\728f90a9-45d8-4bf4-ad67-881df257d4c0.jpg" />
+    <Content Include="Content\images\740ad30e-9c2f-483b-a959-e33b6ab70f41.png" />
+    <Content Include="Content\images\74c5229c-e7ea-40d7-81a9-04c6dbffe65e.png" />
+    <Content Include="Content\images\7579c576-61bc-40aa-b046-932a7110a308.jpg" />
+    <Content Include="Content\images\76cd170d-d6d5-4b0d-9a73-4030c02f2e42.png" />
+    <Content Include="Content\images\77fb5a3a-3437-4ee8-b6f1-48f4afda97bb.jpg" />
+    <Content Include="Content\images\7a7f029c-1ed5-403d-90b5-be9b5f473e99.jpg" />
+    <Content Include="Content\images\8021fbd5-ff94-42eb-b394-48fe0f090f01.jpg" />
+    <Content Include="Content\images\8310dd37-3f0e-4f7a-b35b-fec8e3ae2439.jpg" />
+    <Content Include="Content\images\83c72860-d844-42d6-9717-4d14758d9460.png" />
+    <Content Include="Content\images\84154bd2-70f3-4a5e-b9b6-7431e7de2a35.jpg" />
+    <Content Include="Content\images\84287e09-1fd7-4a0c-a8ff-275eadd97308.jpg" />
+    <Content Include="Content\images\85df728b-5ca6-4af8-a9f8-1b69ec728add.jfif" />
+    <Content Include="Content\images\888c83b8-cd39-4c6c-8349-c1517612b0e1.jpg" />
+    <Content Include="Content\images\8a2ac8bd-cc33-463e-9b51-32dfaf55ece8.jpg" />
+    <Content Include="Content\images\8d8dffcd-bdc0-44ed-833b-81268aaf9405.png" />
+    <Content Include="Content\images\8ea01de3-fb31-48a4-9ec4-8203c51ba55d.png" />
+    <Content Include="Content\images\90b2f53f-794a-4cbb-9626-2e0f1fd63b7a.png" />
+    <Content Include="Content\images\91b37253-53b8-4ff9-9348-c9a69dd6b629.jpg" />
+    <Content Include="Content\images\928fc89d-729b-4a34-953a-c8827a7ccc19.png" />
+    <Content Include="Content\images\9390b292-4e26-4856-9ea8-f7cf7370180a.png" />
+    <Content Include="Content\images\954a5d9c-784d-4c75-9c85-837fb886d55d.png" />
+    <Content Include="Content\images\97555e03-3bd8-4eb7-b920-fede7a030bc3.jpg" />
+    <Content Include="Content\images\979d7277-3166-4d1f-8125-2701733c4c40.png" />
+    <Content Include="Content\images\97bd0208-8bb3-4f37-9655-e9ab9357be1a.png" />
+    <Content Include="Content\images\9cfad890-b4de-417d-afcc-52690d4a95da.jpg" />
+    <Content Include="Content\images\9de9ed8a-4c69-4576-8b8b-59b88394337b.jpg" />
+    <Content Include="Content\images\9ebfa08b-c150-4888-be71-d4d741018493.jpg" />
+    <Content Include="Content\images\a053dc16-7256-4466-9538-3a0d641f7ebf.png" />
+    <Content Include="Content\images\a27856b6-fbcb-41bd-ba7e-b4aa608d0a76.jpg" />
+    <Content Include="Content\images\a4279343-c1fb-4e7c-bd02-2824142220f7.jpg" />
+    <Content Include="Content\images\a42a1619-2c1c-4c55-8bc3-a4247a47bfba.jpg" />
+    <Content Include="Content\images\a4bab443-5bca-4a40-a444-23314a616ee0.png" />
+    <Content Include="Content\images\a9a9ac81-616c-41a2-b899-fc9378e68a1d.jpg" />
+    <Content Include="Content\images\a9fc6901-c0ff-43aa-ad83-940c4b99fe1b.jpg" />
+    <Content Include="Content\images\ab25d38f-973a-4edc-b9af-ab96ce87c095.jpg" />
+    <Content Include="Content\images\ad50d2fd-063f-4616-9daf-c8eb8cf834cb.jpg" />
+    <Content Include="Content\images\adcd23a1-94f4-480e-b34c-51e83c25b4ac.jpg" />
+    <Content Include="Content\images\afc5be93-35f9-40d7-91a1-520f805d2d1c.jpg" />
+    <Content Include="Content\images\afe011c0-eade-48bd-902c-d5d450924632.png" />
+    <Content Include="Content\images\b22a90be-6963-4604-89fc-2835deb452d3.jpg" />
+    <Content Include="Content\images\b23167b4-b72e-4abc-9691-6aebe77274ad.jpg" />
+    <Content Include="Content\images\b2afa51f-3b43-47e2-825b-f8eb866f6a0d.jpg" />
+    <Content Include="Content\images\b3b2bce0-c113-49f2-8b17-de9132608871.jpg" />
+    <Content Include="Content\images\b44015d1-2bf2-45a6-bbe4-d2341a69b0e2.jpg" />
+    <Content Include="Content\images\b6370d6b-94b4-4fd6-93ee-cdc3d71cddb1.png" />
+    <Content Include="Content\images\b8519e6c-6c62-45a5-954c-85fb6072cf83.png" />
+    <Content Include="Content\images\bf44034c-144a-4d1c-8c19-72953271596c.jpg" />
+    <Content Include="Content\images\c2d78b25-228d-4824-a6be-9f215fc92761.jpg" />
+    <Content Include="Content\images\c319cb72-a5da-44eb-90bd-f8c3a55b41fe.jpg" />
+    <Content Include="Content\images\c4dd0da9-edd9-45a3-9dd3-5009e320d98d.jpg" />
+    <Content Include="Content\images\c4ef18b8-ae35-4e5e-9593-ac0a4ae4e85f.jfif" />
+    <Content Include="Content\images\c6fcaab5-ae2e-42dd-84fc-3039153e9078.jpg" />
+    <Content Include="Content\images\c83ba6bd-7dff-45c4-841a-db079cc22dc7.png" />
+    <Content Include="Content\images\cb160f13-b29b-4504-a9bc-91defa012e96.png" />
+    <Content Include="Content\images\cb84d7e1-40f2-4071-8392-afc93e67abe3.jpg" />
+    <Content Include="Content\images\cc2f0439-3201-4784-a491-2928d6abdad2.jpg" />
+    <Content Include="Content\images\ccbab7c0-8a09-4c01-a901-b9d75132dafa.png" />
+    <Content Include="Content\images\d394bff7-d5d0-419e-b63e-cc61581fca34.png" />
+    <Content Include="Content\images\d4c9cb86-6867-4c28-a807-70e23bbad98e.jpg" />
+    <Content Include="Content\images\d4db248a-1154-4ba5-bb5e-0f4d88dbb127.jpg" />
+    <Content Include="Content\images\d5182723-03b9-4045-afff-610e3ae0d3d8.png" />
+    <Content Include="Content\images\d62736ea-0868-4776-ba10-deb1456b0e23.png" />
+    <Content Include="Content\images\d6f0150e-61e0-4ba7-a326-c1464c7483c3.jpg" />
+    <Content Include="Content\images\d88ecf81-b2e3-4cd9-a377-ade76ed2a933.jpg" />
+    <Content Include="Content\images\d8b43a00-5f9d-45b9-8496-19eae48a18fa.jfif" />
+    <Content Include="Content\images\dbad3be9-88fc-4200-97a5-7f33eaf3a070.jpg" />
+    <Content Include="Content\images\dc60c67a-0667-4911-901b-1843239264b9.jpg" />
+    <Content Include="Content\images\dcd3af58-57a1-43de-93a8-bf42e97d49ef.jpg" />
+    <Content Include="Content\images\de970a97-2d81-4fc3-8619-bf0d31be449e.jpg" />
+    <Content Include="Content\images\e0a06951-c5bf-44f7-aeab-4932dc8e2abd.png" />
+    <Content Include="Content\images\e2eedb7b-b9f1-458c-a207-1f0d5f38e30c.jpg" />
+    <Content Include="Content\images\e48c9021-b7bf-49a7-94ad-811713718a93.png" />
+    <Content Include="Content\images\e5044a46-53b0-4631-97f4-11d65e3de375.jpg" />
+    <Content Include="Content\images\e7d1366f-1bcb-4069-bde8-5c018b10cbd3.jpg" />
+    <Content Include="Content\images\e9512e10-ffa2-4a46-ad55-a569f53ac16b.jpg" />
+    <Content Include="Content\images\e9a291f7-b26c-4823-b926-bd720e88d17a.jpg" />
+    <Content Include="Content\images\eab1cf26-f832-4f53-afd3-d611a37987ca.jpg" />
+    <Content Include="Content\images\edfce373-6282-4637-a779-b92cf532d973.jpg" />
+    <Content Include="Content\images\ef6df854-53ef-4985-8103-7dbfe5d2574e.png" />
+    <Content Include="Content\images\f13c0a49-f96e-435e-932e-10f0c92dec8f.jpg" />
+    <Content Include="Content\images\f30affcc-121d-40e5-88c6-1801d3de0180.jpg" />
+    <Content Include="Content\images\f64a37d5-6dd5-4a18-974e-eb1897741433.jpg" />
+    <Content Include="Content\images\f6c57d57-99d1-4b68-ba67-85090223f691.png" />
+    <Content Include="Content\images\fa584ae2-050c-44a2-ad0a-a74980b7f871.png" />
+    <Content Include="Content\images\fa82a389-788b-4baf-ae5d-924dd53ed289.jpg" />
+    <Content Include="Content\images\fbb1ac9f-a94d-4743-8e74-917d18390648.jfif" />
+    <Content Include="Content\images\fd10a857-e6d2-491f-91a6-f261146ec5fc.jpg" />
+    <Content Include="Content\images\fe2a2d94-53e5-4e1f-81f6-8b423110f924.jpg" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.css" />
@@ -256,23 +412,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css.map" />
-    <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
-    <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.css.map" />
-    <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\vendor\bootstrap\css\bootstrap.css.map" />
-    <Content Include="Content\vendor\bootstrap\css\bootstrap.min.css.map" />
-    <Content Include="Content\vendor\bootstrap\js\bootstrap.bundle.js.map" />
-    <Content Include="Content\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
-    <Content Include="Content\vendor\bootstrap\js\bootstrap.js.map" />
-    <Content Include="Content\vendor\bootstrap\js\bootstrap.min.js.map" />
-    <Content Include="Content\vendor\jquery\jquery.min.map" />
-    <Content Include="Content\vendor\jquery\jquery.slim.min.map" />
-    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -290,12 +429,30 @@
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\bootstrap-reboot.css.map" />
-    <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Content\bootstrap-grid.min.css.map" />
+    <Content Include="Content\bootstrap-reboot.css.map" />
+    <Content Include="Content\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\images\69bd4076-f693-48b7-be41-8456d49ed394.xlsx" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css.map" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.css.map" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap.css.map" />
+    <Content Include="Content\vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Content\vendor\bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="Content\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Content\vendor\bootstrap\js\bootstrap.js.map" />
+    <Content Include="Content\vendor\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="Content\vendor\jquery\jquery.min.map" />
+    <Content Include="Content\vendor\jquery\jquery.slim.min.map" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
@@ -437,12 +594,16 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Shared\_TopMenu.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Shared\_DashboardLayout.cshtml" />
+    <Content Include="Views\Dashboard\Users.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\font-awesome\less\" />
     <Folder Include="Content\font-awesome\scss\" />
-    <Folder Include="Content\images\" />
     <Folder Include="Views\Bids\" />
   </ItemGroup>
   <ItemGroup>
