User Registration and list complete

--- a/DealDouble.Database/DealDouble.Database.csproj
+++ b/DealDouble.Database/DealDouble.Database.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\202003131520246_addSummaryColumn.designer.cs">
       <DependentUpon>202003131520246_addSummaryColumn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003141803158_addUserColumn.cs" />
+    <Compile Include="Migrations\202003141803158_addUserColumn.designer.cs">
+      <DependentUpon>202003141803158_addUserColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -89,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003131520246_addSummaryColumn.resx">
       <DependentUpon>202003131520246_addSummaryColumn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003141803158_addUserColumn.resx">
+      <DependentUpon>202003141803158_addUserColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
