--- a/DealDouble.Services/DealDouble.Services.csproj
+++ b/DealDouble.Services/DealDouble.Services.csproj
@@ -93,6 +93,7 @@
     <Compile Include="AuctionService.cs" />
     <Compile Include="DashboardServices.cs" />
     <Compile Include="DealDoubleSignInManager.cs" />
+    <Compile Include="DealDoubleRoleManager.cs" />
     <Compile Include="DealDoubleUserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedService.cs" />
