--- a/DealDouble.Services/DealDouble.Services.csproj
+++ b/DealDouble.Services/DealDouble.Services.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentServices.cs" />
     <Compile Include="BidsServices.cs" />
     <Compile Include="SliderImageServices.cs" />
     <Compile Include="ParentCategorySevices.cs" />
