--- a/DealDouble.Database/DealDouble.Database.csproj
+++ b/DealDouble.Database/DealDouble.Database.csproj
@@ -110,6 +110,10 @@
     <Compile Include="Migrations\202003221509439_addcommentuser.designer.cs">
       <DependentUpon>202003221509439_addcommentuser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003231520158_deleteUsercategory.cs" />
+    <Compile Include="Migrations\202003231520158_deleteUsercategory.designer.cs">
+      <DependentUpon>202003231520158_deleteUsercategory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -159,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003221509439_addcommentuser.resx">
       <DependentUpon>202003221509439_addcommentuser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003231520158_deleteUsercategory.resx">
+      <DependentUpon>202003231520158_deleteUsercategory.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
