--- a/DealDouble.Web/Web.config
+++ b/DealDouble.Web/Web.config
@@ -16,6 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="EnableSSLOnMail" value="True"/>
+    <add key ="senderMail" value="somrat876@gmail.com"/>
+    <add key="senderPassword" value="284976109193somrat@"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
