Mail sending Complete

--- a/DealDouble.Web/Web.config
+++ b/DealDouble.Web/Web.config
@@ -18,7 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EnableSSLOnMail" value="True"/>
     <add key ="senderMail" value="somrat876@gmail.com"/>
-    <add key="senderPassword" value="284976109193somrat@"/>
+    <add key="senderPassword" value="284976109193@somrat"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
